--- a/datatypes_cycles_2.ipynb
+++ b/datatypes_cycles_2.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,15 +76,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[213, 15, 54, 119, 98, 35]\n"
+     ]
+    }
+   ],
    "source": [
-    "for key, value in ids.items():\n",
-    "    q = {}\n",
+    "q = []\n",
+    "for value in ids.values():\n",
     "    for num in value:\n",
-    "        if num in q:\n",
-    "            print(num)"
+    "        if num not in q:\n",
+    "            q.append(num)\n",
+    "        \n",
+    "print(q)\n"
    ]
   },
   {
@@ -97,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,30 +124,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n",
-      "2\n",
-      "2\n",
-      "2\n",
-      "3\n",
-      "3\n",
-      "3\n"
+      "[] [] []\n"
      ]
     }
    ],
    "source": [
-    "for i, word in enumerate(queries):\n",
-    "    w = word.split(' ')\n",
-    "    count = len(w)\n",
+    "p1 = []\n",
+    "p2 = []\n",
+    "p3 = []\n",
+    "for phrase in queries:\n",
+    "    word = phrase.split(' ')\n",
+    "    count = len(word)\n",
+    "    if num == 1:\n",
+    "        p1.append(num)\n",
+    "    if num == 2:\n",
+    "        p2.append(num)\n",
+    "    if num == 3:\n",
+    "        p3.append(num)\n",
     "    \n",
     "\n",
-    "    print(count)"
+    "print(p1, p2, p3)\n"
    ]
   },
   {
@@ -150,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -187,33 +200,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 107,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 2018-01-01\n",
-      "1 yandex\n",
-      "2 cpc\n",
-      "3 100\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "any_list = ['2018-01-01', 'yandex', 'cpc', 100]\n",
-    "\n",
-    "for i, comp in enumerate(any_list):\n",
-    "    print(i, comp)\n"
+    "any_list = ['2018-01-01', 'yandex', 'cpc', 100]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 115,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "dictionary update sequence element #0 has length 1; 2 is required",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-115-943e29f58cd4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mdic\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mcomp\u001b[0m \u001b[1;32min\u001b[0m \u001b[0many_list\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m     \u001b[0mvalue\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcomp\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m     \u001b[0mdic\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: dictionary update sequence element #0 has length 1; 2 is required"
+     ]
+    }
+   ],
+   "source": [
+    "dic = {}\n",
+    "for comp in any_list:\n",
+    "    value = dict(comp)\n",
+    "    dic.add(value)\n",
+    "    \n",
+    "   \n",
+    "    print(dic)"
+   ]
   }
  ],
  "metadata": {
