--- a/datatypes_cycles_1.ipynb
+++ b/datatypes_cycles_1.ipynb
@@ -59,9 +59,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('Alex', 'Emma'), ('Arthur', 'Kate'), ('John', 'Kira'), ('Peter', 'Liza'), ('Richard', 'Trisha')]\n"
+     ]
+    }
+   ],
    "source": [
     "matches=zip(sorted(boys),sorted(girls))\n",
     "print(list(matches))"
@@ -84,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,20 +106,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 Thailand 's average temperature is:  42.94\n",
-      "2 Germany 's average temperature is:  24.69\n",
-      "3 Russia 's average temperature is:  6.69\n",
-      "4 Poland 's average temperature is:  21.34\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i, country in enumerate(countries_temperature):\n",
     "    print (i+1, country [0], \"'s average temperature is: \", round (((sum(country[1]) / len(country[1])) - 32),2) )\n",
@@ -128,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -174,14 +171,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'user1', 'user4', 'user2', 'user3'}\n"
+      "{'user3', 'user4', 'user1', 'user2'}\n"
      ]
     }
    ],
@@ -208,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,20 +270,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "103"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "i = 0\n",
     "s = 0\n",
